--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -8,7 +8,6 @@
     "allowSyntheticDefaultImports": true,
     "target": "ES2023",
     "sourceMap": true,
-    "outDir": "./dist",
     "baseUrl": ".",
     "incremental": true,
     "skipLibCheck": true,
@@ -18,5 +17,5 @@
     "strictBindCallApply": false,
     "noFallthroughCasesInSwitch": false
   },
-  "include": ["./apps/**/*"]
+  "include": ["apps/**/src/**/*.ts", "packages/**/src/**/*.ts"]
 }
