--- a/apps/sls-template/package.json
+++ b/apps/sls-template/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "main": "dist/lambda.js",
   "scripts": {
-    "dev": "serverless offline",
+    "dev": "nodemon",
+    "dev:once": "serverless offline",
     "deploy": "serverless deploy",
     "remove": "serverless remove"
   },
@@ -21,6 +22,7 @@
   "devDependencies": {
     "@types/aws-lambda": "^8.10.159",
     "@types/node": "^25.0.7",
+    "nodemon": "^3.1.11",
     "serverless": "^4.30.0",
     "serverless-esbuild": "^1.57.0",
     "serverless-offline": "^14.4.0",
