--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,37 @@
 node_modules
+.env.dev
+.env.prod
+
+# compiled output
+/dist
+/node_modules
+/build
+
+# Logs
+logs
+*.log
+npm-debug.log*
+
+# Tests
+/coverage
+/.nyc_output
+
+# IDE - VSCode
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+
+# dot-env environment variable files
+.env
+.env.dev
+.env.prod
+.env.local
+
+# serverless
+.serverless
+**/.serverless
+
+
+
