[MONGO-DB] Mongoose integration

--- a/apps/sls-template/serverless.yml
+++ b/apps/sls-template/serverless.yml
@@ -6,6 +6,8 @@ provider:
   region: eu-west-1
   stage: ${opt:stage, 'dev'}
   timeout: 29
+  environment:
+    MONGODB_URI: ${env:MONGODB_URI}
 
 plugins:
   - serverless-offline
