--- a/apps/sls-template/package.json
+++ b/apps/sls-template/package.json
@@ -5,23 +5,27 @@
   "main": "dist/lambda.js",
   "scripts": {
     "dev": "nodemon",
-    "dev:once": "serverless offline",
-    "deploy:prod": "serverless deploy --stage prod",
+    "dev:once": "dotenv -e .env.local -- serverless offline --stage dev",
+    "deploy:prod": "dotenv -e .env.prod -- serverless deploy --stage prod",
     "deploy:dev": "serverless deploy --stage dev"
   },
   "dependencies": {
     "@nestjs/common": "^11.1.11",
+    "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^11.1.11",
+    "@nestjs/mongoose": "^11.0.4",
     "@nestjs/platform-express": "^11.1.11",
     "@vendia/serverless-express": "^4.12.6",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.3",
+    "mongoose": "^9.1.3",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.2"
   },
   "devDependencies": {
     "@types/aws-lambda": "^8.10.159",
     "@types/node": "^25.0.7",
+    "dotenv-cli": "^11.0.0",
     "nodemon": "^3.1.11",
     "serverless": "^4.30.0",
     "serverless-esbuild": "^1.57.0",
