--- a/apps/sls-auth/serverless.yml
+++ b/apps/sls-auth/serverless.yml
@@ -1,4 +1,4 @@
-service: sls-template
+service: sls-auth
 
 provider:
   name: aws
@@ -20,8 +20,8 @@ functions:
 
 custom:
   serverless-offline:
-    httpPort: 4001
-    lambdaPort: 4002
+    httpPort: 5001
+    lambdaPort: 5002
 
   buildConfig:
     dev:
